syntax errors fix