@@ -3,8 +3,8 @@ package com.github.maxmmin.sol.core.client;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JavaType;
 import com.fasterxml.jackson.databind.type.TypeFactory;
+import com.github.maxmmin.sol.util.Types;
 import lombok.RequiredArgsConstructor;
-import com.github.maxmmin.clue.core.util.TypesUtil;
 import com.github.maxmmin.sol.core.exception.RpcException;
 import com.github.maxmmin.sol.core.type.request.*;
 import com.github.maxmmin.sol.core.type.response.ContextWrapper;
@@ -17,12 +17,13 @@ import com.github.maxmmin.sol.core.type.response.account.json.JsonProgramAccount
 import com.github.maxmmin.sol.core.type.response.signature.SignatureInformation;
 import com.github.maxmmin.sol.core.type.response.tx.Transaction;
 import com.github.maxmmin.sol.core.type.response.tx.json.JsonTransaction;
-import org.springframework.lang.Nullable;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 
 @RequiredArgsConstructor
@@ -47,7 +48,7 @@ public class SimpleRpcClient implements RpcClient {
     @Override
     public <V> void callBatched(String method, List<List<Object>> paramsLists, TypeReference<V> typeRef, Map<String, V> results) throws RpcException {
         Map<String, RpcResponse<V>> intermediateMap = new HashMap<>(results.size());
-        List<RpcRequest>requests = paramsLists.stream().map(params -> new RpcRequest(method, params)).toList();
+        List<RpcRequest>requests = paramsLists.stream().map(params -> new RpcRequest(method, params)).collect(Collectors.toList());
         try {
             rpcGateway.sendBatched(requests, typeRef, intermediateMap);
         } finally {
@@ -61,10 +62,10 @@ public class SimpleRpcClient implements RpcClient {
 
     @Override
     public <V> List<V> callBatched(String method, List<List<Object>> params, TypeReference<V> typeRef) throws RpcException {
-        List<RpcRequest>requests = params.stream().map(param -> new RpcRequest(method, param)).toList();
+        List<RpcRequest>requests = params.stream().map(param -> new RpcRequest(method, param)).collect(Collectors.toList());
         return rpcGateway.sendBatched(requests, typeRef).stream()
                 .map(this::extractRpcResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     protected <V> V extractRpcResponse(RpcResponse<V> rpcResponse) {
@@ -94,7 +95,7 @@ public class SimpleRpcClient implements RpcClient {
 
     @Override
     public <V extends ProgramAccount<?>> List<V> getProgramAccounts(String programId, @Nullable GetProgramAccountsConfig config, TypeReference<V> typeRef) throws RpcException {
-        return call("getProgramAccounts", buildParams(programId, config), TypesUtil.toListRef(typeRef));
+        return call("getProgramAccounts", buildParams(programId, config), Types.toListRef(typeRef));
     }
 
     @Override
@@ -109,8 +110,8 @@ public class SimpleRpcClient implements RpcClient {
 
     @Override
     public <V extends ProgramAccount<?>> ContextWrapper<List<V>> getTokenAccountsByOwner(String owner, GetTokenAccountsByOwnerParams params, @Nullable GetTokenAccountsByOwnerConfig config, TypeReference<V> typeRef) throws RpcException {
-        JavaType responseType = TypeFactory.defaultInstance().constructParametricType(ContextWrapper.class, TypesUtil.toListType(typeRef));
-        return call("getTokenAccountsByOwner", buildParams(owner, params, config), TypesUtil.asRef(responseType));
+        JavaType responseType = TypeFactory.defaultInstance().constructParametricType(ContextWrapper.class, Types.toListType(typeRef));
+        return call("getTokenAccountsByOwner", buildParams(owner, params, config), Types.asRef(responseType));
     }
 
     @Override
@@ -140,7 +141,7 @@ public class SimpleRpcClient implements RpcClient {
 
     @Override
     public <V extends Transaction<?, ?>> List<V> getTransaction(List<String> signatures, @Nullable GetTransactionConfig config, TypeReference<V> typeRef) throws RpcException {
-        List<List<Object>>params = signatures.stream().map(signature -> buildParams(signature, config)).toList();
+        List<List<Object>>params = signatures.stream().map(signature -> buildParams(signature, config)).collect(Collectors.toList());
         return callBatched("getTransaction", params, typeRef);
     }
 
@@ -156,14 +157,14 @@ public class SimpleRpcClient implements RpcClient {
 
     @Override
     public <V extends AccountDetails<?>> ContextWrapper<List<V>> getMultipleAccounts(List<String> accounts, @Nullable GetMultipleAccountsConfig config, TypeReference<V> typeRef) throws RpcException {
-        JavaType responseType = TypeFactory.defaultInstance().constructParametricType(ContextWrapper.class, TypesUtil.toListType(typeRef));
-        return call("getMultipleAccounts", buildParams(accounts, config), TypesUtil.asRef(responseType));
+        JavaType responseType = TypeFactory.defaultInstance().constructParametricType(ContextWrapper.class, Types.toListType(typeRef));
+        return call("getMultipleAccounts", buildParams(accounts, config), Types.asRef(responseType));
     }
 
     @Override
     public List<SolanaNodeInfo> getClusterNodes() throws RpcException {
         JavaType responseType = TypeFactory.defaultInstance().constructParametricType(List.class, SolanaNodeInfo.class);
-        return call("getClusterNodes", null, TypesUtil.asRef(responseType));
+        return call("getClusterNodes", null, Types.asRef(responseType));
     }
 
 
