@@ -1,16 +1,13 @@
 package com.github.maxmmin.sol.extension.rotation;
 
-import lombok.RequiredArgsConstructor;
 import com.github.maxmmin.sol.core.client.RpcGateway;
-import com.github.maxmmin.sol.extension.feature.Feature;
 import com.github.maxmmin.sol.extension.RpcConfig;
-import org.springframework.stereotype.Service;
+import com.github.maxmmin.sol.extension.feature.Feature;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Service
-@RequiredArgsConstructor
 public class RpcGatewayContextFactory {
     public <V extends RpcGateway> RpcGatewayContext<V> construct(V gateway, RpcConfig.RpcEndpoint endpoint) {
         List<Feature> features = Arrays.stream(endpoint.getFeatures())
@@ -21,7 +18,7 @@ public class RpcGatewayContextFactory {
                         throw new IllegalArgumentException("Unknown feature " + rpcFeature.getName());
                     }
                 })
-                .toList();
+                .collect(Collectors.collect(Collectors.toList()));
 
         return new RpcGatewayContext<>(gateway, features, endpoint.getPriority());
     }
